<?xml version="1.0" ?>
<package format="2">
  <name>ros_blkarc_driver</name>
  <version>0.9.0</version>
  <description>ROS wrapper for the BLK ARC Module API</description>

  <maintainer email="tengfoong.lam@hexagon.com">Lam Teng Foong</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ros_blkarc_msgs</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>

  <test_depend>rosunit</test_depend>

</package>
